# palautusrepositorio

./: README.md  retro.md
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko1/riippuvuuksien-injektointi-1/src/: index.py
viikko2/git-branch-harjoitus/: index.py  osamaara.py
viikko2/nhl-reader/: pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: .gitignore  pyproject.toml
viikko2/project-reader/: pyproject.toml
viikko2/project-reader/src/: index.py  project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/web-login/: log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/: index.py
viikko4/verkkokauppa/: .coverage
viikko5/: important.txt  ohtu_yapping.txt
viikko5/int-joukko/: .coverage  pyproject.toml
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: index.py  kayttoliittyma.py
viikko5/tennis/: .coverage  pyproject.toml
viikko5/tennis/src/: index.py  tennis_game.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: index.py
viikko7/kivi-paperi-sakset/src/: index.py  kivi_paperi_sakset.py  kps_parempi_tekoaly.py  kps_tekoaly.py  pelimoodit.py  tekoaly.py  tekoaly_parannettu.py
(+1 files in other folders)
